--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Ubuntu+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Ubuntu+Mono&family=Ubuntu:wght@300&display=swap');
+
 .App {
-  text-align: center;
+  padding: 5px;
+  color: #808080;
+  font-size: 14px;
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  max-width: 1000px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+th {
+  height: 50px;
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+tr:nth-child(even) {
+  background-color: #FAFAFA;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title {
+  color: #000000;
+  font-size: 14px;
+}
+
+.column_title {
+  text-align: left;
+
+}
+
+table {
+  border-spacing: 0;
+  width: 100%;
+}
+
+tr {
+  font-size: 12px;
+  height: 46px;
+}
+
+
+.button_link>a {
+  color: #7E7E7E;
+  width: 60px;
+  height: 20px;
+  font-family: 'Ubuntu Mono', monospace;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border: 1px solid #7E7E7E;
+  text-decoration: none;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button_link>a:hover {
+  color: #000000;
 }
